--- a/index.html
+++ b/index.html
@@ -174,7 +174,7 @@
             <small>BUY PANEL :- <a href="https://telegram.me/XtrolCome" class="text-danger">@XtrolCome</a></small>
         </p>
         <p class="text-center text-muted">
-            <small>Don't have an account yet? <a href="https://ffxtrolcheat.vercel.app/register" class="text-success">Register here</a></small>
+            <small>Don't have an account yet? <a href="https://ffxtrolcheat.vercel.app/register.html" class="text-success">Register here</a></small>
         </p>
     </div>
 </div>
