--- a/register.html
+++ b/register.html
@@ -182,7 +182,7 @@
         <p class="text-center text-muted after-card">
             <small class="px-auto p-2 rounded">
                 Already have an account?
-                <a href="https://ffxtrolcheat.vercel.app/login" class="text-danger">Login here</a>
+                <a href="https://ffxtrolcheat.vercel.app/login.html" class="text-danger">Login here</a>
             </small>
         </p>
     </div>
