Update form action URL in register.html

--- a/register.html
+++ b/register.html
@@ -130,7 +130,7 @@
                 REGISTER
             </div>
             <div class="card-body bg-white">
-                <form action="https://ffxtrolcheat.vercel.app/register" method="post" accept-charset="utf-8">
+                <form action="https://ffxtrolcheat.vercel.app/register.html" method="post" accept-charset="utf-8">
 <input type="hidden" name="csrf_test_name" value="3605aa3c3167717d61c5cefe4265747d" />
                 <!-- Hidden Email Field -->
                 <input type="hidden" name="email" value="tgkarthi9751@gmail.com">
